[package]
name = "karesansui"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
