[package]
name = "karesansui"
version = "0.8.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
